# domex

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css  tailwind.config.js
docs/: CNAME  domex-3563031915dca394.js  domex-3563031915dca394_bg.wasm  domex-3bc1b0e9e9085851.js  domex-3bc1b0e9e9085851_bg.wasm  domex-429f30376697ad13.js  domex-429f30376697ad13_bg.wasm  domex-4663470595f6acd8.js  domex-4663470595f6acd8_bg.wasm  domex-64c10cacdd56fdb6.js  domex-64c10cacdd56fdb6_bg.wasm  domex-7101b589937555da.js  domex-7101b589937555da_bg.wasm  domex-7afca90ee4bd30c4_bg.wasm  domex-aa216a7a6099d5a.js  domex-aa216a7a6099d5a_bg.wasm  domex-aa9fd1d614a85ed8.js  domex-aa9fd1d614a85ed8_bg.wasm  domex-f36c4d7a7440e372.js  domex-f36c4d7a7440e372_bg.wasm  index.html  tailwind-194daf8b2a4314a8.css  tailwind-35e1393d008a187d.css  tailwind-844ffc3b735d9141.css  tailwind-eec34a68e4a076c7.css
docs/static/: style.css
src/: lib.rs  main.rs
src/components/: footer.rs  navbar.rs
src/data/: list_of_inside_doors.rs  list_of_metal_doors.rs  list_of_outside_doors.rs  list_of_products.rs  list_of_room_doors.rs  list_of_stal_doors.rs  mod.rs
src/pages/: about_us.rs  contact.rs  home.rs  inside_door.rs  inside_doors.rs  installations.rs  metal_doors.rs  mod.rs  not_found.rs  product.rs  products.rs  room_doors.rs  stal_doors.rs  steel_doors.rs
src/views/home/: call_us.rs  header.rs  mod.rs  write_us.rs
