[package]
name = "domex"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
web-sys = {version = "0.3.70", features = ["HtmlInputElement"]}
yew-router = { git = "https://github.com/yewstack/yew.git" }